--- a/index.html
+++ b/index.html
@@ -2301,8 +2301,26 @@
                         </div>
                     </div>
                     <!-- Nekobaa card end-->
+		    
 
                     <!--[Pain ] card end-->
+		                <!-- The Third Hookage card start-->
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <h2 class="card-title">The Third Hookage</h2>
+                        <img src= "./Images/thirdhookage.jpj"
+			alt= "The Third Hookage" height="300px" width="300px" class="img_card">
+                    </div>
+                    <div class="flip-card-back">
+                        <p class="card-text">His real name is Hiruzen Sarutobi, and he is the Third Hokage of the Hidden Leaf Village. Trained by the legendary First and Second Hokages, he has supposedly been called the Professor for mastering every jutsu native to the Land of Fire. He taught the Sannin, Jiraiya, Tsunade and Orochimaru. He is the father of Asuma Sarutobi and the Grandfather of Konohamaru Sarutobi and Mirai Sarutobi. He was succeeded by Tsunade, one of his students, as the Fifth Hokage.
+
+</p>
+                        <p> </p>
+                    </div>
+                </div>
+            </div>
+            <!-- The Third Hookage card end-->
 
         </main>
         <audio src="./sound/naruto.mp3"></audio>
